# Frequency

./: README.md
lecture1/: CMakeLists.txt  CMakeLists.txt.user.fd94b77  frame.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
